--- a/register_02.html
+++ b/register_02.html
@@ -49,7 +49,7 @@
                 <ul>
                     <li>
                         <img alt="" src="images/contact_icon_1.png" />
-                        <h3>4567 Street name,012 12 City name,Country</h3>
+                        <h3>北京市光华东里8号院中海广场南楼1603室</h3>
                     </li>
                     <li>
                         <img alt="" src="images/contact_icon_2.png" />
