--- a/section.html
+++ b/section.html
@@ -19,9 +19,8 @@
     </div>
     
     <div class="section_body">
-        <div class="chapter_title">
-            <div class="line"></div>
-            <h2>课程列表</h2>
+        <div class="section_title">
+            <h2>搭乘荷航梦想客机，飞抵欧洲门户史基浦</h2>
         </div>
         <div class="chapter_box">
             <div class="chapter_div">
