增加课程测试页面src为空的img标签

--- a/exam.html
+++ b/exam.html
@@ -111,7 +111,7 @@
                     </label>
                 </div>
                 <div class="exam_div">
-                    <h3>3. 荷兰航空是何时成立的？</h3>
+                    <h3>3. 荷兰航空是何时成立的？<img alt="" src="" /></h3>
                     <label class="opation_div">
                         <input name="q_3" type="radio" />
                         <span>A. 1972年</span>
@@ -130,7 +130,7 @@
                     </label>
                 </div>
                 <div class="exam_div">
-                    <h3>4. 荷兰航空是何时成立的？</h3>
+                    <h3>4. 荷兰航空是何时成立的？<img alt="" src="" /></h3>
                     <label class="opation_div">
                         <input name="q_4" type="checkbox" />
                         <span>A. 1972年</span>
