积分兑换和兑换记录页面

--- a/price_record.html
+++ b/price_record.html
@@ -68,73 +68,38 @@
             <div class="line"></div>
             <h2>积分兑换</h2>
         </div>
-        <div class="menber_point">
-            <h2>我的积分</h2>
-            <h3>190</h3>
-            <div class="redeem_btn redeem_record">
-                兑换记录
+        <div class="record_box">
+            <div class="record_div">
+                <img class="time_icon" alt="" src="images/time_icon.png" />
+                <h2>2016.03.02</h2>
+
+                <h3>30积分</h3>
+                <img class="like_icon" alt="" src="images/like_icon.png" />
+                <p>礼物名称</p>
             </div>
-        </div>
-        <div class="price_box">
-            <div class="price_div">
-                <img class="price_icon" alt="" src="images/price_img1.png" />
-                <div class="price_content">
-                    <h2>双肩背书包</h2>
-                    <p>
-                        规格：45*25cm<br />
-                        颜色：橙
-                    </p>
-                    <h3>30积分</h3>
-                    <img class="like_icon" alt="" src="images/like_icon.png" />
-                </div>
-                <div class="redeem_btn">
-                    兑换
-                </div>
+            <div class="record_div">
+                <img class="time_icon" alt="" src="images/time_icon.png" />
+                <h2>2016.03.02</h2>
+
+                <h3>30积分</h3>
+                <img class="like_icon" alt="" src="images/like_icon.png" />
+                <p>礼物名称</p>
             </div>
-            <div class="price_div">
-                <img class="price_icon" alt="" src="images/price_img1.png" />
-                <div class="price_content">
-                    <h2>旅行套票</h2>
-                    <p>
-                        规格：23*18cm<br />
-                        颜色：蓝色
-                    </p>
-                    <h3>200积分</h3>
-                    <img class="like_icon" alt="" src="images/like_icon.png" />
-                </div>
-                <div class="redeem_end">
-                    兑换结束
-                </div>
+            <div class="record_div">
+                <img class="time_icon" alt="" src="images/time_icon.png" />
+                <h2>2016.03.02</h2>
+
+                <h3>30积分</h3>
+                <img class="like_icon" alt="" src="images/like_icon.png" />
+                <p>礼物名称</p>
             </div>
-            <div class="price_div">
-                <img class="price_icon" alt="" src="images/price_img1.png" />
-                <div class="price_content">
-                    <h2>精美笔记本</h2>
-                    <p>
-                        规格：45*25cm<br />
-                        颜色：橙
-                    </p>
-                    <h3>50积分</h3>
-                    <img class="like_icon" alt="" src="images/like_icon.png" />
-                </div>
-                <div class="redeem_btn">
-                    兑换
-                </div>
-            </div>
-            <div class="price_div">
-                <img class="price_icon" alt="" src="images/price_img1.png" />
-                <div class="price_content">
-                    <h2>旅行充电器</h2>
-                    <p>
-                        规格：45*25cm<br />
-                        颜色：橙
-                    </p>
-                    <h3>60积分</h3>
-                    <img class="like_icon" alt="" src="images/like_icon.png" />
-                </div>
-                <div class="redeem_btn">
-                    兑换
-                </div>
+            <div class="record_div">
+                <img class="time_icon" alt="" src="images/time_icon.png" />
+                <h2>2016.03.02</h2>
+
+                <h3>30积分</h3>
+                <img class="like_icon" alt="" src="images/like_icon.png" />
+                <p>礼物名称</p>
             </div>
         </div>
     </div>
