积分兑换页面样式更新

--- a/information.html
+++ b/information.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="format-detection" content="telephone=no" />
-    <title>资料寄送</title>
+    <title>资料领取</title>
     <meta charset="utf-8" />
 
     <link type="text/css" rel="stylesheet" href="css/public.css" />
@@ -63,46 +63,14 @@
         </div>
     </div>
 
-    <div class="infor_box">
+    <div class="info_box">
         <div class="chapter_title">
             <div class="line"></div>
-            <h2>资料寄送</h2>
+            <h2>资料领取</h2>
         </div>
-        <div class="inofr_div">
+        <div class="info_div">
             <img alt="" src="images/price_img1.png" />
-            <h2>2017 荷兰旅游宣传小册</h2>
-            <div class="btn_box">
-                <a class="btn_div" href="javascript:">
-                    领取资料
-                </a>
-            </div>
-        </div>
-        <div class="inofr_div">
-            <img alt="" src="images/price_img2.png" />
-            <h2>2017荷兰地图</h2>
-            <div class="btn_box">
-                <a class="btn_div" href="javascript:">
-                    领取资料
-                </a>
-            </div>
-        </div>
-        <div class="inofr_div">
-            <img alt="" src="images/price_img3.png" />
-            <h2>2017荷兰旅游指南</h2>
-            <div class="btn_box">
-                <a class="btn_div" href="javascript:">
-                    领取资料
-                </a>
-            </div>
-        </div>
-        <div class="inofr_div">
-            <img alt="" src="images/price_img4.png" />
-            <h2>荷兰旅游地图</h2>
-            <div class="btn_box">
-                <a class="btn_div" href="javascript:">
-                    领取资料
-                </a>
-            </div>
+            
         </div>
     </div>
 
