--- a/price.html
+++ b/price.html
@@ -84,8 +84,8 @@
                         规格：45*25cm<br />
                         颜色：橙
                     </p>
-                    <h3>30积分</h3>
                     <img class="like_icon" alt="" src="images/like_icon.png" />
+                    <h3>30积分</h3>
                 </div>
                 <div class="redeem_btn">
                     兑换
@@ -99,11 +99,11 @@
                         规格：23*18cm<br />
                         颜色：蓝色
                     </p>
-                    <h3>200积分</h3>
                     <img class="like_icon" alt="" src="images/like_icon.png" />
+                    <h3>200积分</h3>
                 </div>
                 <div class="redeem_end">
-                    兑换结束
+                    已结束
                 </div>
             </div>
             <div class="price_div">
@@ -114,8 +114,8 @@
                         规格：45*25cm<br />
                         颜色：橙
                     </p>
-                    <h3>50积分</h3>
                     <img class="like_icon" alt="" src="images/like_icon.png" />
+                    <h3>50积分</h3>
                 </div>
                 <div class="redeem_btn">
                     兑换
@@ -129,8 +129,8 @@
                         规格：45*25cm<br />
                         颜色：橙
                     </p>
-                    <h3>60积分</h3>
                     <img class="like_icon" alt="" src="images/like_icon.png" />
+                    <h3>60积分</h3>
                 </div>
                 <div class="redeem_btn">
                     兑换
