资料领取页面

--- a/information.html
+++ b/information.html
@@ -69,8 +69,56 @@
             <h2>资料领取</h2>
         </div>
         <div class="info_div">
-            <img alt="" src="images/price_img1.png" />
-            
+            <img class="info_img" alt="" src="images/information_1.jpg" />
+            <div class="info_content">
+                <h2>预定2015-2016荷兰百宝箱</h2>
+                <p>
+                    百宝箱装饰品用于门店或3*3展台的布置<br />
+                    内含地图、自由行手册、挂旗
+                </p>
+            </div>
+            <div class="info_btn">
+                领取资料
+            </div>
+        </div>
+        <div class="info_div">
+            <img class="info_img" alt="" src="images/information_2.jpg" />
+            <div class="info_content">
+                <h2>2016荷兰全境地图</h2>
+                <p>
+                    H10.5cm*W10.9cm<br />
+                    纸质
+                </p>
+            </div>
+            <div class="info_btn">
+                领取资料
+            </div>
+        </div>
+        <div class="info_div">
+            <img class="info_img" alt="" src="images/information_1.jpg" />
+            <div class="info_content">
+                <h2>预定2015-2016荷兰百宝箱</h2>
+                <p>
+                    百宝箱装饰品用于门店或3*3展台的布置<br />
+                    内含地图、自由行手册、挂旗
+                </p>
+            </div>
+            <div class="info_btn">
+                领取资料
+            </div>
+        </div>
+        <div class="info_div">
+            <img class="info_img" alt="" src="images/information_2.jpg" />
+            <div class="info_content">
+                <h2>2016荷兰全境地图</h2>
+                <p>
+                    H10.5cm*W10.9cm<br />
+                    纸质
+                </p>
+            </div>
+            <div class="info_btn">
+                领取资料
+            </div>
         </div>
     </div>
 
