个人中心页面修改

--- a/ucenter.html
+++ b/ucenter.html
@@ -107,19 +107,19 @@
             <div class="ucenter_btn_div" onclick="">
                 <div class="ucenter_btn">
                     <img class="ucenter_btn_bg" alt="" src="images/square.png" />
-                    <div class="u_btn_icon certificate">
+                    <div class="u_btn_icon chapter">
                         <img alt="" src="images/square.png" />
                     </div>
-                    <h2>专家证书</h2>
+                    <h2>我的进度</h2>
                 </div>
             </div>
             <div class="ucenter_btn_div" onclick="">
                 <div class="ucenter_btn">
                     <img class="ucenter_btn_bg" alt="" src="images/square.png" />
-                    <div class="u_btn_icon edit">
+                    <div class="u_btn_icon certificate">
                         <img alt="" src="images/square.png" />
                     </div>
-                    <h2>修改资料</h2>
+                    <h2>专家证书</h2>
                 </div>
             </div>
             <div class="ucenter_btn_div" onclick="">
@@ -131,15 +131,6 @@
                     <h2>积分兑换</h2>
                 </div>
             </div>
-            <div class="ucenter_btn_div active" onclick="">
-                <div class="ucenter_btn">
-                    <img class="ucenter_btn_bg" alt="" src="images/square.png" />
-                    <div class="u_btn_icon chapter">
-                        <img alt="" src="images/square.png" />
-                    </div>
-                    <h2>我的进度</h2>
-                </div>
-            </div>
             <div class="ucenter_btn_div" onclick="">
                 <div class="ucenter_btn">
                     <img class="ucenter_btn_bg" alt="" src="images/square.png" />
@@ -147,6 +138,15 @@
                         <img alt="" src="images/square.png" />
                     </div>
                     <h2>资料领取</h2>
+                </div>
+            </div>
+            <div class="ucenter_btn_div" onclick="">
+                <div class="ucenter_btn">
+                    <img class="ucenter_btn_bg" alt="" src="images/square.png" />
+                    <div class="u_btn_icon edit">
+                        <img alt="" src="images/square.png" />
+                    </div>
+                    <h2>修改资料</h2>
                 </div>
             </div>
         </div>
