--- a/welcome.html
+++ b/welcome.html
@@ -14,6 +14,9 @@
         body{
             padding-top:0;
         }
+        body{
+            padding-top:0;
+        }
     </style>
 </head>
 <body ontouchstart="">
